Exclude healthcheck path in logger Fix error status
Update baan proto


Create unit test


Implement change


Create baan router


Register baan path


Update docs
