# src/docs/swagger.yaml
@@ -185,18 +185,34 @@ definitions:
     required:
     - ticket
     type: object
-  proto.Group:
+  proto.Baan:
     properties:
+      descriptionEN:
+        type: string
+      descriptionTH:
+        type: string
+      facebook:
+        type: string
+      facebookUrl:
+        type: string
       id:
         type: string
-      leaderID:
+      imageUrl:
         type: string
-      members:
-        items:
-          $ref: '#/definitions/proto.User'
-        type: array
-      token:
+      instagram:
         type: string
+      instagramUrl:
+        type: string
+      line:
+        type: string
+      lineUrl:
+        type: string
+      nameEN:
+        type: string
+      nameTH:
+        type: string
+      size:
+        type: integer
     type: object
   proto.User:
     properties:
@@ -358,6 +374,72 @@ paths:
       summary: Verify ticket and get credential
       tags:
       - auth
+  /baan:
+    get:
+      consumes:
+      - application/json
+      description: Return the array of baan dto if successfully
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/proto.Baan'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
+      security:
+      - AuthToken: []
+      summary: Get all baans
+      tags:
+      - baan
+  /baan/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Return the baan dto if successfully
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.Baan'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
+      security:
+      - AuthToken: []
+      summary: Get the baan data by id
+      tags:
+      - baan
   /file/upload:
     post:
       consumes:
